---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prog = type { i32, i32, ptr }
%main = type { i32, i32, i32 }

@prog_instance = global %prog zeroinitializer
@main_instance = global %main zeroinitializer

define void @prog(ptr %0) {
entry:
  %input1 = getelementptr inbounds nuw %prog, ptr %0, i32 0, i32 0
  %output1 = getelementptr inbounds nuw %prog, ptr %0, i32 0, i32 1
  %inout1 = getelementptr inbounds nuw %prog, ptr %0, i32 0, i32 2
  ret void
}

define void @main(ptr %0) {
entry:
  %var1 = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %var2 = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  %var3 = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 2
  %load_var1 = load i32, ptr %var1, align [filtered]
  store i32 %load_var1, ptr @prog_instance, align [filtered]
  %1 = alloca i32, align [filtered]
  store i32 0, ptr %1, align [filtered]
  store ptr %1, ptr getelementptr inbounds (%prog, ptr @prog_instance, i32 0, i32 2), align [filtered]
  call void @prog(ptr @prog_instance)
  %2 = load i32, ptr getelementptr inbounds (%prog, ptr @prog_instance, i32 0, i32 1), align [filtered]
  store i32 %2, ptr %var2, align [filtered]
  ret void
}
